--- a/app/src/main/res/layout/fragment_alarm_math.xml
+++ b/app/src/main/res/layout/fragment_alarm_math.xml
@@ -59,7 +59,7 @@
                         android:id="@+id/math_btn_1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@color/colorBlack"
+                        android:background="@color/colorSkyBlue"
                         android:textColor="@color/colorWhite"
                         android:layout_marginRight="10dp"
                         android:text="@string/one"
@@ -68,7 +68,7 @@
                         android:id="@+id/math_btn_2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@color/colorBlack"
+                        android:background="@color/colorSkyBlue"
                         android:textColor="@color/colorWhite"
                         android:layout_marginRight="10dp"
                         android:text="@string/two"
@@ -77,7 +77,7 @@
                         android:id="@+id/math_btn_3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@color/colorBlack"
+                        android:background="@color/colorSkyBlue"
                         android:textColor="@color/colorWhite"
                         android:text="@string/three"
                         android:layout_weight="1"/>
@@ -92,7 +92,7 @@
                         android:id="@+id/math_btn_4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@color/colorBlack"
+                        android:background="@color/colorSkyBlue"
                         android:textColor="@color/colorWhite"
                         android:layout_marginRight="10dp"
                         android:text="@string/four"
@@ -101,7 +101,7 @@
                         android:id="@+id/math_btn_5"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@color/colorBlack"
+                        android:background="@color/colorSkyBlue"
                         android:textColor="@color/colorWhite"
                         android:layout_marginRight="10dp"
                         android:text="@string/five"
@@ -110,7 +110,7 @@
                         android:id="@+id/math_btn_6"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@color/colorBlack"
+                        android:background="@color/colorSkyBlue"
                         android:textColor="@color/colorWhite"
                         android:text="@string/six"
                         android:layout_weight="1"/>
@@ -125,7 +125,7 @@
                         android:id="@+id/math_btn_7"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@color/colorBlack"
+                        android:background="@color/colorSkyBlue"
                         android:textColor="@color/colorWhite"
                         android:layout_marginRight="10dp"
                         android:text="@string/seven"
@@ -134,7 +134,7 @@
                         android:id="@+id/math_btn_8"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@color/colorBlack"
+                        android:background="@color/colorSkyBlue"
                         android:textColor="@color/colorWhite"
                         android:layout_marginRight="10dp"
                         android:text="@string/eight"
@@ -143,7 +143,7 @@
                         android:id="@+id/math_btn_9"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@color/colorBlack"
+                        android:background="@color/colorSkyBlue"
                         android:textColor="@color/colorWhite"
                         android:text="@string/nine"
                         android:layout_weight="1"/>
@@ -157,7 +157,7 @@
                         android:id="@+id/math_btn_del"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@color/colorBlack"
+                        android:background="@color/colorSkyBlue"
                         android:textColor="@color/colorWhite"
                         android:layout_marginRight="10dp"
                         android:text="@string/delete"
@@ -166,7 +166,7 @@
                         android:id="@+id/math_btn_0"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@color/colorBlack"
+                        android:background="@color/colorSkyBlue"
                         android:textColor="@color/colorWhite"
                         android:layout_marginRight="10dp"
                         android:text="@string/zero"
@@ -175,7 +175,7 @@
                         android:id="@+id/math_btn_clear"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@color/colorBlack"
+                        android:background="@color/colorSkyBlue"
                         android:textColor="@color/colorWhite"
                         android:text="@string/clear"
                         android:layout_weight="1"/>
